prevent overflow on section-av

--- a/css/main.css
+++ b/css/main.css
@@ -236,7 +236,7 @@ body {
   background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.75), rgba(255, 255, 255, 0.5)); }
 
 .section-av {
-  height: 100vh;
+  height: auto;
   background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0.5)); }
 
 .card {
