--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,7 +23,7 @@
 }
 
 .section-av {
-	height: 100vh;
+	height: auto;
 	background-image: linear-gradient(to bottom right, 
 									  rgba($white, .75),
 									  rgba($black, .5));
